--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -7,7 +7,16 @@
 
 $font-stack: GeistVF;
 
-$primary: "#171717";
+$primary: #b91b28;
 
-$white: "#ffffff";
-$gray: "#171717";
+$white: #ffffff;
+$off-white: #f5f5f5;
+$gray: #171717;
+$error: #e53e3e;
+
+$button-hover: #81121b;
+
+$disabled-background: #edf2f7;
+$disabled-color: #a0aec0;
+
+$shadow: rgba(0, 0, 0, 0.1);
