feat: listagem de dragões

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -7,16 +7,18 @@
 
 $font-stack: GeistVF;
 
-$primary: #b91b28;
+$primary: #3498db;
 
 $white: #ffffff;
 $off-white: #f5f5f5;
 $gray: #171717;
+$gray-2: #555;
 $error: #e53e3e;
 
 $button-hover: #81121b;
+$primary-hover: #2980b9;
 
 $disabled-background: #edf2f7;
 $disabled-color: #a0aec0;
 
-$shadow: rgba(0, 0, 0, 0.1);
+$shadow: rgba(0, 0, 0, 0.2);
