--- a/src/components/Button/styles.scss
+++ b/src/components/Button/styles.scss
@@ -4,7 +4,7 @@
     display: inline-flex;
     justify-content: center;
     align-items: center;
-    padding: 0.75rem 1.5rem;
+    padding: 0.5rem 1.5rem;
     font-size: 1rem;
     border-radius: 0.375rem;
     cursor: pointer;
@@ -16,11 +16,11 @@
       border: none;
   
       &:hover {
-        background-color: v.$button-hover;
+        background-color: v.$primary-hover;
       }
   
       &:active {
-        background-color: v.$button-hover;
+        background-color: v.$primary-hover;
       }
     }
   
