--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -13,6 +13,8 @@ $white: #ffffff;
 $off-white: #f5f5f5;
 $gray: #171717;
 $gray-2: #555;
+$gray-3: #ddd;
+
 $error: #e53e3e;
 
 $button-hover: #81121b;
@@ -21,4 +23,4 @@ $primary-hover: #2980b9;
 $disabled-background: #edf2f7;
 $disabled-color: #a0aec0;
 
-$shadow: rgba(0, 0, 0, 0.2);
+$shadow: rgba(0, 0, 0, 0.1);
