--- a/src/pages/Dragon/Edit/styles.scss
+++ b/src/pages/Dragon/Edit/styles.scss
@@ -1,6 +1,7 @@
+
 @use '../../../styles/variables' as v;
 
-.add-dragon {
+.edit-dragon {
   padding: 2rem;
   background-color: v.$off-white;
   color: v.$gray;
