--- a/src/pages/Dragon/styles.scss
+++ b/src/pages/Dragon/styles.scss
@@ -10,6 +10,11 @@
     align-items: center;
     margin-bottom: 2rem;
 
+    .header-right {
+      display: flex;
+      gap: 1rem;
+    }
+
     h1 {
       text-align: center;
       color: v.$gray;
@@ -20,41 +25,6 @@
   ul {
     list-style: none;
     padding: 0;
-  }
-  
-  .dragon-card {
-    background-color: v.$white;
-    border: 1px solid v.$off-white;
-    border-radius: 8px;
-    margin-bottom: 1rem;
-    padding: 1rem;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-
-    h2 {
-      margin: 0 0 0.5rem 0;
-      color: v.$gray;
-    }
-  
-    p {
-      margin: 0.5rem 0;
-      color: v.$gray-2;
-  
-      strong {
-        color: v.$gray;
-      }
-    }
-  
-    .buttons {
-      display: flex;
-      gap: 1rem;
-
-      button {
-        height: 2.2rem;
-      }
-    }
   }
 }
   
