--- a/src/pages/Dragon/styles.scss
+++ b/src/pages/Dragon/styles.scss
@@ -4,7 +4,7 @@
   padding: 2rem;
   background-color: v.$off-white;
   
-  .header {
+  .header-list {
     display: flex;
     justify-content: space-between;
     align-items: center;
