--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -7,7 +7,7 @@
 
 $font-stack: GeistVF;
 
-$primary: #3498db;
+$primary: #e77213;
 
 $white: #ffffff;
 $off-white: #f5f5f5;
@@ -18,7 +18,7 @@ $gray-3: #ddd;
 $error: #e53e3e;
 
 $button-hover: #81121b;
-$primary-hover: #2980b9;
+$primary-hover: #944b0e;
 
 $disabled-background: #edf2f7;
 $disabled-color: #a0aec0;
