feat: ajustes de responsividade

--- a/src/components/Button/styles.scss
+++ b/src/components/Button/styles.scss
@@ -50,7 +50,7 @@
     }
   
     .loader {
-      border: 2px solid v.$white;
+      border: 2px solid v.$primary;
       border-top: 2px solid transparent;
       border-radius: 50%;
       width: 20px;
