--- a/src/pages/Dragon/Add/styles.scss
+++ b/src/pages/Dragon/Add/styles.scss
@@ -7,6 +7,10 @@
   height: max-content;
   min-height: 100vh;
 
+  @media (max-width: 768px) {
+    padding: 1rem;
+  }
+
   .title {
     font-size: 2rem;
     font-weight: bold;
