--- a/src/pages/Dragon/Edit/styles.scss
+++ b/src/pages/Dragon/Edit/styles.scss
@@ -8,6 +8,10 @@
   height: max-content;
   min-height: 100vh;
 
+  @media (max-width: 768px) {
+    padding: 1rem;
+  }
+
   .title {
     font-size: 2rem;
     font-weight: bold;
