--- a/src/components/DragonCard/styles.scss
+++ b/src/components/DragonCard/styles.scss
@@ -9,12 +9,8 @@
     box-shadow: 0 2px 4px v.$shadow;
     display: flex;
     justify-content: space-between;
-    align-items: center;
-
-    @media (max-width: 768px) {
-      flex-direction: column;
-      align-items: start;
-    }
+    align-items: start;
+    flex-direction: column;
   
     h2 {
       margin: 0 0 0.5rem 0;
@@ -33,10 +29,7 @@
     .buttons {
       display: flex;
       gap: 1rem;
-  
-      button {
-        height: 2.2rem;
-      }
+      margin-top: 1rem;
 
       @media (max-width: 768px) {
         flex-direction: column;
